# electric

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  METER_SYSTEM_PLAN.md  PLAN.md  README.md  TODO-v2-migration.md  TODO.md  USAGE.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 500a063c449c_initial_schema_with_property_meter_.py
app/: __init__.py  main.py
app/api/routes/: auth.py  health.py  meters.py  properties.py  readings.py  users.py
app/core/: config.py  database.py
app/db/models/: __init__.py  meter.py  meter_reading.py  property.py  user.py
app/models/: associations.py  cost_formula.py  enums.py  meter.py  meter_reading.py  property.py  user.py
app/schemas/: meter.py  meter_reading.py  property.py  user.py
app/schemas/v2/: __init__.py  billing.py  readings.py
app/services/: auth.py  meter.py  meter_reading.py  meter_reading_service.py  meter_service.py  property.py  property_service.py  user_service.py
app/services/v2/: __init__.py  billing.py  readings.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/components/: _bottom_tabs.html  _flash_messages.html  _footer.html  _navbar.html  _pagination.html
app/templates/costs/: breakdown.html  trends.html
app/templates/dashboard/: index.html
app/templates/formulas/: create.html  edit.html  list.html
app/templates/home/: index.html
app/templates/meters/: create.html  detail.html  edit.html  list.html
app/templates/profile/: change_password.html  edit.html  view.html
app/templates/properties/: create.html  detail.html  edit.html  (+1 more)
app/web/: __init__.py  dependencies.py  template_config.py
docs/: FLYIO_INTEGRATION_PLAN.md
scripts/: seed_data.py
tests/: __init__.py  test_api.py  test_auth.py  test_main.py  test_meter_ledger.py  test_v2_api.py
(+16 files in other folders)
